--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   gap: ^3.0.1
   flutter_riverpod: ^2.6.1
   riverpod_annotation: ^2.6.1
+  go_router: ^14.7.2
 
 dev_dependencies:
   flutter_test:
